scripts/nullaway/annotator/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8.txt
../annotator/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/terminal/types/UnixTerminal.java:47: warning: Signal is internal proprietary API and may be removed in a future release
            Signal.handle(new Signal("WINCH"), new SignalHandler() {
                              ^
../annotator/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/terminal/types/UnixTerminal.java:47: warning: SignalHandler is internal proprietary API and may be removed in a future release
            Signal.handle(new Signal("WINCH"), new SignalHandler() {
                                                   ^
../annotator/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/terminal/types/UnixTerminal.java:48: warning: Signal is internal proprietary API and may be removed in a future release
                public synchronized void handle (Signal signal) {
                                                 ^
../annotator/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/terminal/types/UnixTerminal.java:47: warning: Signal is internal proprietary API and may be removed in a future release
            Signal.handle(new Signal("WINCH"), new SignalHandler() {
            ^
../annotator/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/test/screen/Resize.java:31: error: [NullAway] dereferenced expression s is @Nullable
                    final String       labelW      = " " +s.getX() +" ";
                                                           ^
    (see http://t.uber.com/nullaway )
../annotator/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/test/terminal/Resize.java:27: error: [NullAway] dereferenced expression t is @Nullable
        t.write(20, 1, "                                      ",
         ^
    (see http://t.uber.com/nullaway )
../annotator/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/test/terminal/Resize.java:28: error: [NullAway] dereferenced expression newSize is @Nullable
                20, 1, newSize.getX() +"x" +newSize.getY(),
                              ^
    (see http://t.uber.com/nullaway )
../annotator/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/test/terminal/Matching.java:16: error: [NullAway] @NonNull static field t not initialized
    static       UnixTerminal t;
                              ^
    (see http://t.uber.com/nullaway )
../annotator/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/terminal/types/UnixTerminal.java:18: error: [NullAway] dereferenced expression System.console() is @Nullable
        return HAVE_CONSOLE ? System.console().writer() : new OutputStreamWriter(System.out);
                                              ^
    (see http://t.uber.com/nullaway )
../annotator/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/terminal/types/UnixTerminal.java:22: error: [NullAway] dereferenced expression System.console() is @Nullable
        return HAVE_CONSOLE ? System.console().reader() : new InputStreamReader(System.in);
                                              ^
    (see http://t.uber.com/nullaway )
../annotator/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/terminal/input/InputDecoder.java:62: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return lastTerminalSize;
        ^
    (see http://t.uber.com/nullaway )
7 errors
4 warnings
